@@ -24,7 +24,6 @@
 
 package com.sun.electric.tool.ncc.strategy;
 import java.util.HashMap;
-import java.util.Iterator;
 import java.util.List;
 
 import com.sun.electric.tool.ncc.NccGlobals;
